apps/leaven/leaven-multi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: leaven-multi
  namespace: leaven
  labels:
    app: leaven-multi
spec:
  selector:
    matchLabels:
      app: leaven-multi
  template:
    metadata:
      labels:
        app: leaven-multi
    spec:
      containers:
        - name: leaven-multi
          image: hyeonwoo5342/leaven-multi:35
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "20Mi"
              cpu: "10m"
            requests:
              memory: "20Mi"
              cpu: "10m"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
      imagePullSecrets:
        - name: dockerhub-secret
